lib/procedo/formula/language.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


module Procedo
  module Formula
    module Language
      include Treetop::Runtime

      def root
        @root ||= :expression
      end

      include Procedo::Formula::Nodes

      def _nt_expression
        start_index = index
        if node_cache[:expression].has_key?(index)
          cached = node_cache[:expression][index]
          if cached
            node_cache[:expression][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        r1 = _nt_conditive
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          r2 = _nt_additive
          if r2
            r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
            r0 = r2
          else
            r3 = _nt_primary
            if r3
              r3 = SyntaxNode.new(input, (index-1)...index) if r3 == true
              r0 = r3
            else
              @index = i0
              r0 = nil
            end
          end
        end

        node_cache[:expression][start_index] = r0

        r0
      end

      module Conditive0
        def test
          elements[0]
        end

        def space1
          elements[1]
        end

        def space2
          elements[3]
        end

        def if_true
          elements[4]
        end

        def space3
          elements[5]
        end

        def space4
          elements[7]
        end

        def if_false
          elements[8]
        end
      end

      def _nt_conditive
        start_index = index
        if node_cache[:conditive].has_key?(index)
          cached = node_cache[:conditive][index]
          if cached
            node_cache[:conditive][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_boolean_expression
        s0 << r1
        if r1
          r2 = _nt_space
          s0 << r2
          if r2
            if (match_len = has_terminal?("?", false, index))
              r3 = true
              @index += match_len
            else
              terminal_parse_failure('"?"')
              r3 = nil
            end
            s0 << r3
            if r3
              r4 = _nt_space
              s0 << r4
              if r4
                r5 = _nt_argument
                s0 << r5
                if r5
                  r6 = _nt_space
                  s0 << r6
                  if r6
                    if (match_len = has_terminal?(":", false, index))
                      r7 = true
                      @index += match_len
                    else
                      terminal_parse_failure('":"')
                      r7 = nil
                    end
                    s0 << r7
                    if r7
                      r8 = _nt_space
                      s0 << r8
                      if r8
                        i9 = index
                        r10 = _nt_argument
                        if r10
                          r10 = SyntaxNode.new(input, (index-1)...index) if r10 == true
                          r9 = r10
                        else
                          r11 = _nt_conditive
                          if r11
                            r11 = SyntaxNode.new(input, (index-1)...index) if r11 == true
                            r9 = r11
                          else
                            @index = i9
                            r9 = nil
                          end
                        end
                        s0 << r9
                      end
                    end
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(Condition,input, i0...index, s0)
          r0.extend(Conditive0)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:conditive][start_index] = r0

        r0
      end

      module Multitive0
        def head
          elements[0]
        end

        def operand
          elements[4]
        end
      end

      module Multitive1
        def head
          elements[0]
        end

        def operand
          elements[4]
        end
      end

      def _nt_multitive
        start_index = index
        if node_cache[:multitive].has_key?(index)
          cached = node_cache[:multitive][index]
          if cached
            node_cache[:multitive][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        i1, s1 = index, []
        r2 = _nt_primary
        s1 << r2
        if r2
          r4 = _nt_space
          if r4
            r3 = r4
          else
            r3 = instantiate_node(SyntaxNode,input, index...index)
          end
          s1 << r3
          if r3
            if (match_len = has_terminal?("*", false, index))
              r5 = true
              @index += match_len
            else
              terminal_parse_failure('"*"')
              r5 = nil
            end
            s1 << r5
            if r5
              r7 = _nt_space
              if r7
                r6 = r7
              else
                r6 = instantiate_node(SyntaxNode,input, index...index)
              end
              s1 << r6
              if r6
                r8 = _nt_multitive
                s1 << r8
              end
            end
          end
        end
        if s1.last
          r1 = instantiate_node(Multiplication,input, i1...index, s1)
          r1.extend(Multitive0)
        else
          @index = i1
          r1 = nil
        end
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          i9, s9 = index, []
          r10 = _nt_primary
          s9 << r10
          if r10
            r12 = _nt_space
            if r12
              r11 = r12
            else
              r11 = instantiate_node(SyntaxNode,input, index...index)
            end
            s9 << r11
            if r11
              if (match_len = has_terminal?("/", false, index))
                r13 = true
                @index += match_len
              else
                terminal_parse_failure('"/"')
                r13 = nil
              end
              s9 << r13
              if r13
                r15 = _nt_space
                if r15
                  r14 = r15
                else
                  r14 = instantiate_node(SyntaxNode,input, index...index)
                end
                s9 << r14
                if r14
                  r16 = _nt_multitive
                  s9 << r16
                end
              end
            end
          end
          if s9.last
            r9 = instantiate_node(Division,input, i9...index, s9)
            r9.extend(Multitive1)
          else
            @index = i9
            r9 = nil
          end
          if r9
            r9 = SyntaxNode.new(input, (index-1)...index) if r9 == true
            r0 = r9
          else
            r17 = _nt_primary
            if r17
              r17 = SyntaxNode.new(input, (index-1)...index) if r17 == true
              r0 = r17
            else
              @index = i0
              r0 = nil
            end
          end
        end

        node_cache[:multitive][start_index] = r0

        r0
      end

      module Additive0
        def head
          elements[0]
        end

        def operand
          elements[4]
        end
      end

      module Additive1
        def head
          elements[0]
        end

        def operand
          elements[4]
        end
      end

      def _nt_additive
        start_index = index
        if node_cache[:additive].has_key?(index)
          cached = node_cache[:additive][index]
          if cached
            node_cache[:additive][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        i1, s1 = index, []
        r2 = _nt_multitive
        s1 << r2
        if r2
          r4 = _nt_space
          if r4
            r3 = r4
          else
            r3 = instantiate_node(SyntaxNode,input, index...index)
          end
          s1 << r3
          if r3
            if (match_len = has_terminal?("+", false, index))
              r5 = true
              @index += match_len
            else
              terminal_parse_failure('"+"')
              r5 = nil
            end
            s1 << r5
            if r5
              r7 = _nt_space
              if r7
                r6 = r7
              else
                r6 = instantiate_node(SyntaxNode,input, index...index)
              end
              s1 << r6
              if r6
                r8 = _nt_additive
                s1 << r8
              end
            end
          end
        end
        if s1.last
          r1 = instantiate_node(Addition,input, i1...index, s1)
          r1.extend(Additive0)
        else
          @index = i1
          r1 = nil
        end
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          i9, s9 = index, []
          r10 = _nt_multitive
          s9 << r10
          if r10
            r12 = _nt_space
            if r12
              r11 = r12
            else
              r11 = instantiate_node(SyntaxNode,input, index...index)
            end
            s9 << r11
            if r11
              if (match_len = has_terminal?("-", false, index))
                r13 = true
                @index += match_len
              else
                terminal_parse_failure('"-"')
                r13 = nil
              end
              s9 << r13
              if r13
                r15 = _nt_space
                if r15
                  r14 = r15
                else
                  r14 = instantiate_node(SyntaxNode,input, index...index)
                end
                s9 << r14
                if r14
                  r16 = _nt_additive
                  s9 << r16
                end
              end
            end
          end
          if s9.last
            r9 = instantiate_node(Substraction,input, i9...index, s9)
            r9.extend(Additive1)
          else
            @index = i9
            r9 = nil
          end
          if r9
            r9 = SyntaxNode.new(input, (index-1)...index) if r9 == true
            r0 = r9
          else
            r17 = _nt_multitive
            if r17
              r17 = SyntaxNode.new(input, (index-1)...index) if r17 == true
              r0 = r17
            else
              @index = i0
              r0 = nil
            end
          end
        end

        node_cache[:additive][start_index] = r0

        r0
      end

      module Primary0
        def expression
          elements[2]
        end

      end

      def _nt_primary
        start_index = index
        if node_cache[:primary].has_key?(index)
          cached = node_cache[:primary][index]
          if cached
            node_cache[:primary][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        r1 = _nt_numeric
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          r2 = _nt_reading
          if r2
            r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
            r0 = r2
          else
            r3 = _nt_string_expression
            if r3
              r3 = SyntaxNode.new(input, (index-1)...index) if r3 == true
              r0 = r3
            else
              r4 = _nt_object
              if r4
                r4 = SyntaxNode.new(input, (index-1)...index) if r4 == true
                r0 = r4
              else
                r5 = _nt_interpolation
                if r5
                  r5 = SyntaxNode.new(input, (index-1)...index) if r5 == true
                  r0 = r5
                else
                  i6, s6 = index, []
                  if (match_len = has_terminal?("(", false, index))
                    r7 = true
                    @index += match_len
                  else
                    terminal_parse_failure('"("')
                    r7 = nil
                  end
                  s6 << r7
                  if r7
                    r9 = _nt_space
                    if r9
                      r8 = r9
                    else
                      r8 = instantiate_node(SyntaxNode,input, index...index)
                    end
                    s6 << r8
                    if r8
                      r10 = _nt_expression
                      s6 << r10
                      if r10
                        r12 = _nt_space
                        if r12
                          r11 = r12
                        else
                          r11 = instantiate_node(SyntaxNode,input, index...index)
                        end
                        s6 << r11
                        if r11
                          if (match_len = has_terminal?(")", false, index))
                            r13 = true
                            @index += match_len
                          else
                            terminal_parse_failure('")"')
                            r13 = nil
                          end
                          s6 << r13
                        end
                      end
                    end
                  end
                  if s6.last
                    r6 = instantiate_node(Expression,input, i6...index, s6)
                    r6.extend(Primary0)
                  else
                    @index = i6
                    r6 = nil
                  end
                  if r6
                    r6 = SyntaxNode.new(input, (index-1)...index) if r6 == true
                    r0 = r6
                  else
                    @index = i0
                    r0 = nil
                  end
                end
              end
            end
          end
        end

        node_cache[:primary][start_index] = r0

        r0
      end

      module StringExpression0
        def string_body
          elements[1]
        end

      end

      def _nt_string_expression
        start_index = index
        if node_cache[:string_expression].has_key?(index)
          cached = node_cache[:string_expression][index]
          if cached
            node_cache[:string_expression][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if (match_len = has_terminal?("'", false, index))
          r1 = true
          @index += match_len
        else
          terminal_parse_failure('"\'"')
          r1 = nil
        end
        s0 << r1
        if r1
          s2, i2 = [], index
          loop do
            r3 = _nt_string_part
            if r3
              s2 << r3
            else
              break
            end
          end
          r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
          s0 << r2
          if r2
            if (match_len = has_terminal?("'", false, index))
              r4 = true
              @index += match_len
            else
              terminal_parse_failure('"\'"')
              r4 = nil
            end
            s0 << r4
          end
        end
        if s0.last
          r0 = instantiate_node(StringExpression,input, i0...index, s0)
          r0.extend(StringExpression0)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:string_expression][start_index] = r0

        r0
      end

      def _nt_string_part
        start_index = index
        if node_cache[:string_part].has_key?(index)
          cached = node_cache[:string_part][index]
          if cached
            node_cache[:string_part][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        r1 = _nt_interpolation
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          r2 = _nt_text
          if r2
            r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
            r0 = r2
          else
            @index = i0
            r0 = nil
          end
        end

        node_cache[:string_part][start_index] = r0

        r0
      end

      def _nt_text
        start_index = index
        if node_cache[:text].has_key?(index)
          cached = node_cache[:text][index]
          if cached
            node_cache[:text][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        s0, i0 = [], index
        loop do
          if has_terminal?(@regexps[gr = '\A["_"a-zA-Z0-9\\s\\n]'] ||= Regexp.new(gr), :regexp, index)
            r1 = true
            @index += 1
          else
            terminal_parse_failure('["_"a-zA-Z0-9\\s\\n]')
            r1 = nil
          end
          if r1
            s0 << r1
          else
            break
          end
        end
        if s0.empty?
          @index = i0
          r0 = nil
        else
          r0 = instantiate_node(Text,input, i0...index, s0)
        end

        node_cache[:text][start_index] = r0

        r0
      end

      module Interpolation0
        def expression
          elements[2]
        end

      end

      def _nt_interpolation
        start_index = index
        if node_cache[:interpolation].has_key?(index)
          cached = node_cache[:interpolation][index]
          if cached
            node_cache[:interpolation][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if (match_len = has_terminal?("%\{", false, index))
          r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
          @index += match_len
        else
          terminal_parse_failure('"%\\{"')
          r1 = nil
        end
        s0 << r1
        if r1
          r3 = _nt_space
          if r3
            r2 = r3
          else
            r2 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r2
          if r2
            r4 = _nt_expression
            s0 << r4
            if r4
              r6 = _nt_space
              if r6
                r5 = r6
              else
                r5 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r5
              if r5
                if (match_len = has_terminal?("\}", false, index))
                  r7 = true
                  @index += match_len
                else
                  terminal_parse_failure('"\\}"')
                  r7 = nil
                end
                s0 << r7
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(Interpolation,input, i0...index, s0)
          r0.extend(Interpolation0)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:interpolation][start_index] = r0

        r0
      end

      def _nt_argument
        start_index = index
        if node_cache[:argument].has_key?(index)
          cached = node_cache[:argument][index]
          if cached
            node_cache[:argument][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        r1 = _nt_numeric
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          r2 = _nt_symbol
          if r2
            r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
            r0 = r2
          else
            r3 = _nt_reading
            if r3
              r3 = SyntaxNode.new(input, (index-1)...index) if r3 == true
              r0 = r3
            else
              r4 = _nt_object
              if r4
                r4 = SyntaxNode.new(input, (index-1)...index) if r4 == true
                r0 = r4
              else
                r5 = _nt_variable
                if r5
                  r5 = SyntaxNode.new(input, (index-1)...index) if r5 == true
                  r0 = r5
                else
                  r6 = _nt_expression
                  if r6
                    r6 = SyntaxNode.new(input, (index-1)...index) if r6 == true
                    r0 = r6
                  else
                    @index = i0
                    r0 = nil
                  end
                end
              end
            end
          end
        end

        node_cache[:argument][start_index] = r0

        r0
      end

      def _nt_object
        start_index = index
        if node_cache[:object].has_key?(index)
          cached = node_cache[:object][index]
          if cached
            node_cache[:object][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        r1 = _nt_function_call
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          r2 = _nt_environment_variable
          if r2
            r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
            r0 = r2
          else
            @index = i0
            r0 = nil
          end
        end

        node_cache[:object][start_index] = r0

        r0
      end

      module Reading0
        def unit
          elements[1]
        end

      end

      module Reading1
        def object
          elements[0]
        end

        def indicator
          elements[2]
        end

        def options
          elements[3]
        end
      end

      module Reading2
        def unit
          elements[1]
        end

      end

      module Reading3
        def object
          elements[0]
        end

        def indicator
          elements[2]
        end

        def options
          elements[3]
        end
      end

      def _nt_reading
        start_index = index
        if node_cache[:reading].has_key?(index)
          cached = node_cache[:reading][index]
          if cached
            node_cache[:reading][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        i1, s1 = index, []
        r2 = _nt_object
        s1 << r2
        if r2
          if (match_len = has_terminal?("..", false, index))
            r3 = instantiate_node(SyntaxNode,input, index...(index + match_len))
            @index += match_len
          else
            terminal_parse_failure('".."')
            r3 = nil
          end
          s1 << r3
          if r3
            r4 = _nt_indicator
            s1 << r4
            if r4
              i6, s6 = index, []
              if (match_len = has_terminal?("(", false, index))
                r7 = true
                @index += match_len
              else
                terminal_parse_failure('"("')
                r7 = nil
              end
              s6 << r7
              if r7
                r8 = _nt_unit
                s6 << r8
                if r8
                  if (match_len = has_terminal?(")", false, index))
                    r9 = true
                    @index += match_len
                  else
                    terminal_parse_failure('")"')
                    r9 = nil
                  end
                  s6 << r9
                end
              end
              if s6.last
                r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
                r6.extend(Reading0)
              else
                @index = i6
                r6 = nil
              end
              if r6
                r5 = r6
              else
                r5 = instantiate_node(SyntaxNode,input, index...index)
              end
              s1 << r5
            end
          end
        end
        if s1.last
          r1 = instantiate_node(IndividualReading,input, i1...index, s1)
          r1.extend(Reading1)
        else
          @index = i1
          r1 = nil
        end
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          i10, s10 = index, []
          r11 = _nt_object
          s10 << r11
          if r11
            if (match_len = has_terminal?(".", false, index))
              r12 = true
              @index += match_len
            else
              terminal_parse_failure('"."')
              r12 = nil
            end
            s10 << r12
            if r12
              r13 = _nt_indicator
              s10 << r13
              if r13
                i15, s15 = index, []
                if (match_len = has_terminal?("(", false, index))
                  r16 = true
                  @index += match_len
                else
                  terminal_parse_failure('"("')
                  r16 = nil
                end
                s15 << r16
                if r16
                  r17 = _nt_unit
                  s15 << r17
                  if r17
                    if (match_len = has_terminal?(")", false, index))
                      r18 = true
                      @index += match_len
                    else
                      terminal_parse_failure('")"')
                      r18 = nil
                    end
                    s15 << r18
                  end
                end
                if s15.last
                  r15 = instantiate_node(SyntaxNode,input, i15...index, s15)
                  r15.extend(Reading2)
                else
                  @index = i15
                  r15 = nil
                end
                if r15
                  r14 = r15
                else
                  r14 = instantiate_node(SyntaxNode,input, index...index)
                end
                s10 << r14
              end
            end
          end
          if s10.last
            r10 = instantiate_node(WholeReading,input, i10...index, s10)
            r10.extend(Reading3)
          else
            @index = i10
            r10 = nil
          end
          if r10
            r10 = SyntaxNode.new(input, (index-1)...index) if r10 == true
            r0 = r10
          else
            @index = i0
            r0 = nil
          end
        end

        node_cache[:reading][start_index] = r0

        r0
      end

      module EnvironmentVariable0
      end

      module EnvironmentVariable1
      end

      def _nt_environment_variable
        start_index = index
        if node_cache[:environment_variable].has_key?(index)
          cached = node_cache[:environment_variable][index]
          if cached
            node_cache[:environment_variable][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if has_terminal?(@regexps[gr = '\A[A-Z]'] ||= Regexp.new(gr), :regexp, index)
          r1 = true
          @index += 1
        else
          terminal_parse_failure('[A-Z]')
          r1 = nil
        end
        s0 << r1
        if r1
          s2, i2 = [], index
          loop do
            if has_terminal?(@regexps[gr = '\A[A-Z0-9]'] ||= Regexp.new(gr), :regexp, index)
              r3 = true
              @index += 1
            else
              terminal_parse_failure('[A-Z0-9]')
              r3 = nil
            end
            if r3
              s2 << r3
            else
              break
            end
          end
          r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
          s0 << r2
          if r2
            s4, i4 = [], index
            loop do
              i5, s5 = index, []
              if (match_len = has_terminal?("_", false, index))
                r6 = true
                @index += match_len
              else
                terminal_parse_failure('"_"')
                r6 = nil
              end
              s5 << r6
              if r6
                s7, i7 = [], index
                loop do
                  if has_terminal?(@regexps[gr = '\A[A-Z0-9]'] ||= Regexp.new(gr), :regexp, index)
                    r8 = true
                    @index += 1
                  else
                    terminal_parse_failure('[A-Z0-9]')
                    r8 = nil
                  end
                  if r8
                    s7 << r8
                  else
                    break
                  end
                end
                if s7.empty?
                  @index = i7
                  r7 = nil
                else
                  r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
                end
                s5 << r7
              end
              if s5.last
                r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
                r5.extend(EnvironmentVariable0)
              else
                @index = i5
                r5 = nil
              end
              if r5
                s4 << r5
              else
                break
              end
            end
            r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            s0 << r4
          end
        end
        if s0.last
          r0 = instantiate_node(EnvironmentVariable,input, i0...index, s0)
          r0.extend(EnvironmentVariable1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:environment_variable][start_index] = r0

        r0
      end

      module Variable0
      end

      module Variable1
      end

      def _nt_variable
        start_index = index
        if node_cache[:variable].has_key?(index)
          cached = node_cache[:variable][index]
          if cached
            node_cache[:variable][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if has_terminal?(@regexps[gr = '\A[a-z]'] ||= Regexp.new(gr), :regexp, index)
          r1 = true
          @index += 1
        else
          terminal_parse_failure('[a-z]')
          r1 = nil
        end
        s0 << r1
        if r1
          s2, i2 = [], index
          loop do
            if has_terminal?(@regexps[gr = '\A[a-z0-9]'] ||= Regexp.new(gr), :regexp, index)
              r3 = true
              @index += 1
            else
              terminal_parse_failure('[a-z0-9]')
              r3 = nil
            end
            if r3
              s2 << r3
            else
              break
            end
          end
          r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
          s0 << r2
          if r2
            s4, i4 = [], index
            loop do
              i5, s5 = index, []
              if (match_len = has_terminal?("_", false, index))
                r6 = true
                @index += match_len
              else
                terminal_parse_failure('"_"')
                r6 = nil
              end
              s5 << r6
              if r6
                s7, i7 = [], index
                loop do
                  if has_terminal?(@regexps[gr = '\A[a-z0-9]'] ||= Regexp.new(gr), :regexp, index)
                    r8 = true
                    @index += 1
                  else
                    terminal_parse_failure('[a-z0-9]')
                    r8 = nil
                  end
                  if r8
                    s7 << r8
                  else
                    break
                  end
                end
                if s7.empty?
                  @index = i7
                  r7 = nil
                else
                  r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
                end
                s5 << r7
              end
              if s5.last
                r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
                r5.extend(Variable0)
              else
                @index = i5
                r5 = nil
              end
              if r5
                s4 << r5
              else
                break
              end
            end
            r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            s0 << r4
          end
        end
        if s0.last
          r0 = instantiate_node(Variable,input, i0...index, s0)
          r0.extend(Variable1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:variable][start_index] = r0

        r0
      end

      module Indicator0
      end

      module Indicator1
      end

      def _nt_indicator
        start_index = index
        if node_cache[:indicator].has_key?(index)
          cached = node_cache[:indicator][index]
          if cached
            node_cache[:indicator][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if has_terminal?(@regexps[gr = '\A[a-z]'] ||= Regexp.new(gr), :regexp, index)
          r1 = true
          @index += 1
        else
          terminal_parse_failure('[a-z]')
          r1 = nil
        end
        s0 << r1
        if r1
          s2, i2 = [], index
          loop do
            if has_terminal?(@regexps[gr = '\A[a-z0-9]'] ||= Regexp.new(gr), :regexp, index)
              r3 = true
              @index += 1
            else
              terminal_parse_failure('[a-z0-9]')
              r3 = nil
            end
            if r3
              s2 << r3
            else
              break
            end
          end
          r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
          s0 << r2
          if r2
            s4, i4 = [], index
            loop do
              i5, s5 = index, []
              if (match_len = has_terminal?("_", false, index))
                r6 = true
                @index += match_len
              else
                terminal_parse_failure('"_"')
                r6 = nil
              end
              s5 << r6
              if r6
                s7, i7 = [], index
                loop do
                  if has_terminal?(@regexps[gr = '\A[a-z0-9]'] ||= Regexp.new(gr), :regexp, index)
                    r8 = true
                    @index += 1
                  else
                    terminal_parse_failure('[a-z0-9]')
                    r8 = nil
                  end
                  if r8
                    s7 << r8
                  else
                    break
                  end
                end
                if s7.empty?
                  @index = i7
                  r7 = nil
                else
                  r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
                end
                s5 << r7
              end
              if s5.last
                r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
                r5.extend(Indicator0)
              else
                @index = i5
                r5 = nil
              end
              if r5
                s4 << r5
              else
                break
              end
            end
            r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            s0 << r4
          end
        end
        if s0.last
          r0 = instantiate_node(Indicator,input, i0...index, s0)
          r0.extend(Indicator1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:indicator][start_index] = r0

        r0
      end

      module Unit0
      end

      module Unit1
      end

      def _nt_unit
        start_index = index
        if node_cache[:unit].has_key?(index)
          cached = node_cache[:unit][index]
          if cached
            node_cache[:unit][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end
